--- a/gcp_delete_vpc.yml
+++ b/gcp_delete_vpc.yml
@@ -2,13 +2,13 @@
   hosts: localhost
   vars:
      gcp_project: o365-cloud-security
-     gcp_cred_kind: serviceaccount
+   #  gcp_cred_kind: serviceaccount
   tasks:
     - name: Delete a  VPC network
       gcp_compute_network:
         name: network-instance
         project: "{{ gcp_project }}"
-        auth_kind: "{{ gcp_cred_kind }}"
+        #auth_kind: "{{ gcp_cred_kind }}"
         state: absent
       register: network
 
@@ -17,6 +17,6 @@
         name: address-instance
         region: us-west1
         project: "{{ gcp_project }}"
-        auth_kind: "{{ gcp_cred_kind }}"
+      #  auth_kind: "{{ gcp_cred_kind }}"
         state: absent
       register: address
