--- a/gcp_create_vpc.yml
+++ b/gcp_create_vpc.yml
@@ -3,13 +3,13 @@
   hosts: localhost
   vars:
      gcp_project: o365-cloud-security
-     #gcp_cred_kind: serviceaccount
+     gcp_cred_kind: serviceaccount
   tasks:
     - name: create a  VPC network
       gcp_compute_network:
         name: network-instance
         project: "{{ gcp_project }}"
-       #auth_kind: "{{ gcp_cred_kind }}"
+        auth_kind: "{{ gcp_cred_kind }}"
         auto_create_subnetworks: 'true'
         state: present
       register: network
@@ -18,7 +18,7 @@
       gcp_compute_address:
         name: address-instance
         region: us-west1
-        #project: "{{ gcp_project }}"
+        project: "{{ gcp_project }}"
         auth_kind: "{{ gcp_cred_kind }}"
         state: present
       register: address
