--- a/gcp_create_vpc.yml
+++ b/gcp_create_vpc.yml
@@ -1,6 +1,6 @@
 ---
 - src: google.cloud
-- name: Create a GCP instance
+  name: Create a GCP instance
   hosts: localhost
   vars:
      gcp_project: o365-cloud-security
