--- a/gcp_create_vpc.yml
+++ b/gcp_create_vpc.yml
@@ -2,7 +2,7 @@
 - name: Create a GCP instance
   hosts: localhost
   roles:
-    - google.cloud
+    - google.cloud.gcp_compute_instance
   vars:
      gcp_project: o365-cloud-security
      gcp_cred_kind: serviceaccount
